// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<View>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "400",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags />
  </View>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
</View>
`;

exports[`2. tile b 1`] = `
<View>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 22,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags />
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        The 
        <Text>
          Duke of Edinburgh
        </Text>
         could be charged with driving without due care and attention after his car accident yesterday
        ...
      </Text>
    </Text>
  </View>
</View>
`;

exports[`3. tile c 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
  <View>
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 22,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags />
  </View>
</View>
`;

exports[`4. tile d 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "width": "45%",
      }
    }
  >
    <Image />
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingVertical": 5,
        "width": "55%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 22,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags />
  </View>
</View>
`;

exports[`5. tile e 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "width": "45%",
      }
    }
  >
    <Image />
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingVertical": 5,
        "width": "55%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 22,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags />
  </View>
</View>
`;
